# lambcalc-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: anf.h  arena.h  ast.h  convert.h  hoist.h  lexer.h  lower.h  parser.h  rename.h  utils.h  visitor.h
src/: anf-defunctionalization.sml  anf.cpp  ast.cpp  convert.cpp  hoist.cpp  lexer.cpp  lower.cpp  main.cpp  parser.cpp  rename.cpp  visitor.cpp
test/: anf.cpp  arena.cpp  convert.cpp  hoist.cpp  lexer.cpp  lower.cpp  parser.cpp  rename.cpp
